# pyedhrec

./: .gitignore  README.md  pyproject.toml
src/: pyedhrec.py
src/edhrec/: __init__.py  caching.py  pyedhrec.py  utils.py
